; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_sch_cbs.c_cbs_enqueue_offload.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_sch_cbs.c_cbs_enqueue_offload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.Qdisc = type { i32 }
%struct.cbs_sched_data = type { %struct.Qdisc* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.Qdisc*, %struct.sk_buff**)* @cbs_enqueue_offload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cbs_enqueue_offload(%struct.sk_buff* %0, %struct.Qdisc* %1, %struct.sk_buff** %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.Qdisc*, align 8
  %6 = alloca %struct.sk_buff**, align 8
  %7 = alloca %struct.cbs_sched_data*, align 8
  %8 = alloca %struct.Qdisc*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.Qdisc* %1, %struct.Qdisc** %5, align 8
  store %struct.sk_buff** %2, %struct.sk_buff*** %6, align 8
  %9 = load %struct.Qdisc*, %struct.Qdisc** %5, align 8
  %10 = call %struct.cbs_sched_data* @qdisc_priv(%struct.Qdisc* %9)
  store %struct.cbs_sched_data* %10, %struct.cbs_sched_data** %7, align 8
  %11 = load %struct.cbs_sched_data*, %struct.cbs_sched_data** %7, align 8
  %12 = getelementptr inbounds %struct.cbs_sched_data, %struct.cbs_sched_data* %11, i32 0, i32 0
  %13 = load %struct.Qdisc*, %struct.Qdisc** %12, align 8
  store %struct.Qdisc* %13, %struct.Qdisc** %8, align 8
  %14 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %15 = load %struct.Qdisc*, %struct.Qdisc** %5, align 8
  %16 = load %struct.Qdisc*, %struct.Qdisc** %8, align 8
  %17 = load %struct.sk_buff**, %struct.sk_buff*** %6, align 8
  %18 = call i32 @cbs_child_enqueue(%struct.sk_buff* %14, %struct.Qdisc* %15, %struct.Qdisc* %16, %struct.sk_buff** %17)
  ret i32 %18
}

declare dso_local %struct.cbs_sched_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local i32 @cbs_child_enqueue(%struct.sk_buff*, %struct.Qdisc*, %struct.Qdisc*, %struct.sk_buff**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
